--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -275,24 +275,28 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <SubSubSection title="Recap"  id="recap_com" >
 
-<DisplayTable id="rvp-tc" class_="mb-3">
-          <tr>
-          <th>Type of shape</th>
-          <th>Operation</th>
-        </tr>
-        <tr>
-          <td>Simple shapes</td>
-		  <td> Symmetry tables </td>
-        </tr>
-        <tr>
-          <td>Combination of simple shapes</td>
-          <td>Find each c.o.m and then combine</td>
-        </tr>
-		<tr>
-		  <td>Complex shapes</td>
-		  <td>Integrate</td>
-		</tr>
-      </DisplayTable>
+    <DisplayTable id="rvp-tc" class_="mb-3">
+        <thead>
+            <tr>
+                <th noborder>Type of shape</th>
+                <th>Operation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Simple shapes</td>
+                <td> Symmetry tables </td>
+            </tr>
+            <tr>
+                <td>Combination of simple shapes</td>
+                <td>Find each c.o.m and then combine</td>
+            </tr>
+            <tr>
+                <td>Complex shapes</td>
+                <td>Integrate</td>
+            </tr>
+        </tbody>
+    </DisplayTable>
 
 </SubSubSection>
 
