--- a/src/pages/dyn/work_and_energy.astro
+++ b/src/pages/dyn/work_and_energy.astro
@@ -534,7 +534,7 @@ import Col from "../../components/Col.astro"
 <DisplayTable id="friction_table">
     <thead>
         <tr>
-            <th class="table-shaded">
+            <th class="table-shaded" noborder>
 		<strong>Stick</strong>
             </th>
             <th class="table-shaded">
@@ -978,7 +978,7 @@ import Col from "../../components/Col.astro"
 	<DisplayTable id="rec-tc">
 		<thead>
 			<tr>
-				<th>type of collision</th>
+				<th noborder>type of collision</th>
                 <th>definition</th>
 			</tr>
 		</thead>
@@ -1194,7 +1194,7 @@ import Col from "../../components/Col.astro"
 	<DisplayTable id="rec-tc">
 		<thead>
 			<tr>
-				<th>range</th>
+				<th noborder>range</th>
 				<th>type of collision</th>
 			</tr>
 		</thead>
