--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -41,10 +41,10 @@ The center of mass, center of gravity, and center of volume of an object are all
 The center of mass, center of gravity, and center of volume are all represented by a point <InlineEquation equation="(\\bar{x},\\bar{y}, \\bar{z})" />.
 </p>
 
-<DisplayTable id="mvdiag_table">
+<DisplayTable id="mvdiag_table-bis">
     <thead>
         <tr>
-	    <th class="table-shaded"> 
+	    <th class="table-shaded" noborder> 
                 <strong></strong>
             </th>            
 	   <th class="table-shaded">
@@ -60,7 +60,7 @@ The center of mass, center of gravity, and center of volume are all represented 
     </thead>
     <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 <strong>Definition</strong>
             </td>
             <td>
@@ -76,7 +76,7 @@ The center of mass, center of gravity, and center of volume are all represented 
     </tbody>
     <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 <strong>Equation<br> (Summation <br> Form)</strong>
             </td>
             <td>
@@ -92,7 +92,7 @@ The center of mass, center of gravity, and center of volume are all represented 
     </tbody>
     <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 <strong>Equation <br> (Integral <br> Form)</strong>
             </td>
             <td>
@@ -196,7 +196,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
 <DisplayTable id="mvdiag_table">
     <thead>
         <tr style="text-align: center">
-            <th class="table-shaded" style="vertical-align: middle; width:10%"><strong>Shape</strong></th>
+            <th class="table-shaded" style="vertical-align: middle; width:10%" noborder><strong>Shape</strong></th>
             <th class="table-shaded" style="vertical-align: middle; width:60%"><strong>Diagram</strong></th>            
             <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{x}}"/></strong></th>
             <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{y}}"/></strong></th>    
@@ -204,7 +204,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
     </thead>
     <tbody>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft" >
+            <td >
                 Rectangle </td>
                 <td><Image src='/Statics/COMFigures/RectangleCentroid.png' width='5' />
             </td>
@@ -212,7 +212,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
             <td><DisplayEquation equation="h/2" /></td>
         </tr>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft">
+            <td>
                 Right Triangle </td>
                 <td><Image src='/Statics/COMFigures/TriangleCentroid.png' width='5' />
             </td>
@@ -220,7 +220,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
             <td><DisplayEquation equation="h/3" /></td>
         </tr>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft">
+            <td>
                 Isoceles Triangle </td>
                 <td><Image src='/Statics/COMFigures/IsocelesTriangleCentroid.png' width='5' />
             </td>
@@ -228,7 +228,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
             <td><DisplayEquation equation="h/3" /></td>
         </tr>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft">
+            <td>
                 Circle </td>
                 <td><Image src='/Statics/COMFigures/CircleCentroid.png' width='5' />
             </td>
@@ -236,7 +236,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
             <td><DisplayEquation equation="r" /></td>
         </tr>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft">
+            <td>
                 Semicircle </td>
                 <td><Image src='/Statics/COMFigures/SemicircleCentroid.png' width='5' />
             </td>
@@ -244,7 +244,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
             <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
         </tr>
         <tr style="vertical-align: middle; text-align: center">
-            <td class="nosideborderleft">
+            <td>
                 Quarter Circle </td>
                 <td><Image src='/Statics/COMFigures/QuarterCircleCentroid.png' width='5' />
             </td>
@@ -308,7 +308,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
     </thead>
     <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 1
             </td>
             <td>
@@ -327,7 +327,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
     </tbody>
     <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 2
             </td>
             <td>
@@ -346,7 +346,7 @@ If the shape has an axis of symmetry, the centroid falls on that line of symmetr
     </tbody>
         <tbody>
         <tr>
-            <td class="nosideborderleft">
+            <td>
                 3
             </td>
             <td>
