--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -13,24 +13,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro";
 import CalloutCard from "../../components/CalloutCard.astro";
 import CalloutContainer from "../../components/CalloutContainer.astro";
 import Image from "../../components/Image.astro";
+import DisplayTable from "../../components/DisplayTable.astro";
 ---
 
 <style>
     red-text{
         background-color: red;
         color: black;
-    }
-
-    .background-yellow{
-        background-color: #f0f0d0;
-        border: 1px solid #444;
-        border-radius: 5px;
-    }
-
-    display-equation{
-        width: 100%;
-        margin-bottom: 0.5rem;
-        overflow: hidden;
     }
 </style>
 
@@ -42,9 +31,9 @@ The aim of using components is to maintain a consistant look and feel throughout
 
 When relevant, we've tried to maintain the LateX naming scheme for ease of use by those coming directly from it with little coding experience. For example:
 <ul>
-<li> \item => `Item`</li>
-<li> \itemize => `Itemize`</li>
-<li> \enumerate => `Enumerate`</li>
+<li> \item =&gt; `Item`</li>
+<li> \itemize =&gt; `Itemize`</li>
+<li> \enumerate =&gt; `Enumerate`</li>
 </ul>
 "Components" and "elements" will be used interchangeably throughout this document.
 
@@ -315,7 +304,7 @@ Example:
 </SubSubSection>
 
 
-<SubSection id="callout" title="Callout card elements:">
+<SubSection id="callout" title="Callout card elements">
 
 <h4 class="h3">CalloutContainer:</h4>
 
@@ -357,7 +346,7 @@ Example:
 <CalloutContainer slot="cards">
     <CalloutCard title="Extras!">
         <p style="margin-bottom: 0px">Random image:</p>
-        <img src="https://picsum.photos/200" />
+        <Image src="https://picsum.photos/200" />
     </CalloutCard>
     <CalloutCard>
         <p style="margin-bottom: 0px">Lorem ipsum.</p>
@@ -375,7 +364,7 @@ Example:
     <div class="example-callout">
         <CalloutCard title="Extras!">
             <p style="margin-bottom: 0px">Random image:</p>
-            <img src="https://picsum.photos/200" />
+            <Image src="https://picsum.photos/400" />
         </CalloutCard>
         <CalloutCard>
             <p style="margin-bottom: 0px">Lorem ipsum.</p>
@@ -398,7 +387,7 @@ Example:
 </style>
 </SubSection>
 
-<h3><a id="image" class="title">Images:</a></h3>
+<SubSection id="images" title="Images">
 
 The `Image` component is used to display images with optional width and alt text (text displayed in case the image fails to load).
 
@@ -420,13 +409,12 @@ Will just display the image.
 Example: 
 
 <CodeBox language="html" code=`
-<Image src="/Solid_Mechanics/Bending-Figures/Geometry.png" width="5"/>
+<Image src="/Solid_Mechanics/Bending-Figures/Geometry.png" width="2"/>
 ` />
 
 <p class="mt-3">Result:</p>
-<div style="width: 100%; display: flex; align-items: center; justify-content:center;">
-<Image src="/Solid_Mechanics/Bending-Figures/Geometry.png" width="5" />
-</div>
+
+<Image src="/Solid_Mechanics/Bending-Figures/Geometry.png" width="2" />
 
 <p class="mt-3"><u>Regular:</u></p>
 
@@ -443,13 +431,227 @@ Example:
 ` />
 
 <p class="mt-3">Result:</p>
-<div style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content:center;">
 <Image src="/Solid_Mechanics/Torsion-Figures/Equilibrium.png" width="3">
     Wow that's a beautiful image
 </Image>
-</div>
 
-<h3><a id="utilities" class="title">Utility elements:</a></h3>
+<SubSection id="tables" title="Tables">
+    Used to create tables. This element ensures mobile responsiveness, default HTML tables might break the look of the page if they contain a lot of content, or if they feel like it.
+
+    <p>Type: Regular only</p>
+
+Options:
+<ul>
+    <li>id: Gives an id to the table to ensure proper responsiveness. <red-text>Required.</red-text></li>
+    <li>class_: Give the table extra classes for styling. Optional.</li>
+</ul>
+
+<p>
+    <red-text>Accessibility note:</red-text> The header content should be wrapped within the `thead` element, and the body content should be wrapped within a `tbody` element. There should only be one of each in your table. This allows for proper styling on our end, and is the HTML standard browsers expect, therefore deviating from this might break the look of your tables.
+</p>
+
+
+Example: 
+
+<CodeBox language="html" code=`
+<DisplayTable id="rvp-tc" class_="mb-3">
+          <thead>
+            <tr>
+              <th noborder>coordinate</th>
+              <th>name</th>
+              <th>range</th>
+              <th>definition</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>\\(x\\)</td>
+              <td>horizontal</td>
+              <td>\\(-\\infty \\lt x \\lt \\infty\\)</td>
+              <td>horizontal distance from the \\(y\\)-axis</td>
+          </tr>
+          <tr>
+              <td>\\(y\\)</td>
+              <td>vertical</td>
+              <td>\\(-\\infty \\lt y \\lt \\infty\\)</td>
+              <td>vertical distance from the \\(x\\)-axis</td>
+          </tr>
+          </tbody>
+        </DisplayTable>
+` />
+
+<p class="mt-3">Result:</p>
+
+<DisplayTable id="rvp-tc" class_="mb-3">
+    <thead>
+      <tr>
+        <th noborder>coordinate</th>
+        <th>name</th>
+        <th>range</th>
+        <th>definition</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>\(x\)</td>
+        <td>horizontal</td>
+        <td>\(-\infty \lt x \lt \infty\)</td>
+        <td>horizontal distance from the \(y\)-axis</td>
+    </tr>
+    <tr>
+        <td>\(y\)</td>
+        <td>vertical</td>
+        <td>\(-\infty \lt y \lt \infty\)</td>
+        <td>vertical distance from the \(x\)-axis</td>
+    </tr>
+    </tbody>
+  </DisplayTable>
+
+We have added a few utilies to customize the look of your tables while maintaining a consistent look and feel in the pages. For example, add the `table-shaded` class to add a grey background to each cell. For example, this can be used in the header to contrast it with the rest of the page. Example:
+
+<CodeBox code=`
+<DisplayTableid="shapes_table">
+    <thead>
+        <tr>
+            <th class="table-shaded" noborder>
+                <strong>Shape</strong>
+            </th>
+            <th class="table-shaded" style="width:50%">
+                <strong>Diagram</strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong>MoI about the centroid (centroidal axis)</strong>
+            </th>	
+            <th class="table-shaded"> 
+                <strong>MoI about the origin</strong>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align: middle">Circle</td>
+            <td>
+            <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Circle.png' width='5'/>
+            </td>
+            <td style="vertical-align: middle">
+            <InlineEquation equation="\\\\bar{I_{x'}} = \\\\bar{I_{y'}}  = \\\\frac{1}{4} \\\\pi r^4" />
+            </td>
+            <td style="vertical-align: middle">
+            <InlineEquation equation="J_O= \\\\frac{1}{2} \\\\pi r^4"/>
+            </td>
+        </tr>
+    </tbody>
+</DisplayTable>`
+/>
+<p class="mt-3">Result:</p>
+
+<DisplayTable id="shapes_table">
+    <thead>
+        <tr>
+            <th class="table-shaded" noborder><strong>Shape</strong>
+            </th>
+            <th class="table-shaded" style="width:50%">
+                <strong>Diagram</strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong>MoI about the centroid (centroidal axis)</strong>
+            </th>	
+            <th class="table-shaded"> 
+                <strong>MoI about the origin</strong>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align: middle">
+                Circle
+            </td>
+            <td>
+                <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Circle.png' width='5'> </Image>
+            </td>
+        <td style="vertical-align: middle">
+            <InlineEquation equation="\\bar{I_{x'}} = \\bar{I_{y'}}  = \\frac{1}{4} \\pi r^4" />
+        </td>
+        <td style="vertical-align: middle">
+            <br>
+            <br>
+            <InlineEquation equation="J_O= \\frac{1}{2} \\pi r^4"/>    
+        </td>
+        </tr>
+    </tbody>
+</DisplayTable>
+
+It can also be used to emphasize a particular part of the table. Example:
+
+<CodeBox code=`
+DisplayTable id="moi_table" class_="mt-3">
+    <thead>
+        <tr>
+            <th></th>
+            <th>
+                <strong>Mass moment of inertia</strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong>Area moment of inertia (used in Statics!)</strong>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Equations</th>
+            <td>
+                <DisplayEquation equation='I_{P,\\\\hat{a}} = \\\\iiint_\\\\mathcal{B} \\\\rho r^2 \\\\,dV\\\\' /> 
+            </td>
+            <td class="table-shaded">
+                <DisplayEquation equation='I_x = \\\\int_{A}^{} y^2 \\\\,dA \\\\' />
+                <DisplayEquation equation='I_y = \\\\int_{A}^{} x^2 \\\\,dA \\\\' />
+                <DisplayEquation equation='\\\\begin{aligned} J_O &= \\\\int_{A}^{} r^2 \\\\,dA \\\\\\\\ &= \\\\int_{A}^{} (x^2+y^2) \\\\,dA\\\\ \\\\end{aligned}' />
+            </td>
+        </tr>
+        <tr>
+            <th>Courses</th>
+            <td>TAM 212</td>
+            <td class="table-shaded">TAM 210, TAM 251</td>
+        </tr>
+    </tbody>
+</DisplayTable>` />
+<p class="mt-3">Result:</p>
+
+<DisplayTable id="moi_table">
+    <thead>
+        <tr>
+            <th></th>
+            <th>
+                <strong>Mass moment of inertia</strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong>Area moment of inertia (used in Statics!)</strong>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Equations</th>
+            <td>
+                <DisplayEquation equation='I_{P,\\hat{a}} = \\iiint_\\mathcal{B} \\rho r^2 \\,dV\\' /> 
+            </td>
+            <td class="table-shaded">
+                <DisplayEquation equation='I_x = \\int_{A}^{} y^2 \\,dA \\' />
+                <DisplayEquation equation='I_y = \\int_{A}^{} x^2 \\,dA \\' />
+                <DisplayEquation equation='\\begin{aligned} J_O &= \\int_{A}^{} r^2 \\,dA \\\\ &= \\int_{A}^{} (x^2+y^2) \\,dA\\ \\end{aligned}' />
+            </td>
+        </tr>
+        <tr>
+            <th>Courses</th>
+            <td>TAM 212</td>
+            <td class="table-shaded">TAM 210, TAM 251</td>
+        </tr>
+    </tbody>
+</DisplayTable>
+
+Notice how using a `th` element as the first element of each row in the `tbody` section bolds the text and aligns it vertically? Use this behavior as desired.
+
+</SubSection>
 
 
 </Layout>
