--- a/src/layouts/BlankLayout.astro
+++ b/src/layouts/BlankLayout.astro
@@ -38,7 +38,8 @@ const { title } = Astro.props;
 		<link rel="stylesheet" href="/static/css/darkTheme.css" id="darkTheme" disabled>
 
 		<link rel="stylesheet" href="/static/css/tables.css">
-
+		<script src="/highlight.js" is:inline></script>
+		
 		<script src="/static/js/themes.js" is:inline></script>
 		<link rel="stylesheet" href="/static/css/themes.css">
 		
