--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,6 +48,7 @@ const pagename = cleaned[1]
 		<link rel="stylesheet" href="/static/css/darkTheme.css" id="darkTheme" disabled>
 
 		<link rel="stylesheet" href="/static/css/tables.css">
+		<script src="/highlight.js" is:inline></script>
 
 		<script src="/static/js/themes.js" is:inline></script>
 		<link rel="stylesheet" href="/static/css/themes.css">
